--- a/app/views/recupero/informes/informePagos.scala.html
+++ b/app/views/recupero/informes/informePagos.scala.html
@@ -186,9 +186,12 @@
 				<tr>
 				    <th width="20"><input type="checkbox" name="checkAll" id="checkAll"/></th>
 				    <th width="80">Institucion</th>
-					<th width="120">Factura</th>
+				    <th width="120">Factura</th>
+
 					<th width="120">Recibo</th>
 					<th width="60">Fecha</th>
+					<th width="60">Fecha Pago</th>
+					<th width="20">Dias</th>
 					<th>Cliente</th>
 					<th width="90">Total factura</th>
 					<th width="90">Total pagos</th>
@@ -199,11 +202,11 @@
 				<tr>
 					<td><input type="checkbox" name="check_listado[]" value="@informe.id" class="notSeleccion" id="check-@informe.id"/></td>
 					<td>@if(informe.deposito != null){@informe.deposito.sigla}</td>
-					<td>
-						@informe.numero
-					</td>
+					<td>@informe.numero</td>
 					<td>@if(informe.recuperoRecibo != null){@informe.recuperoRecibo.getNumeroRecibo()}</td>
 					<td>@DateUtils.formatDate(informe.fecha)</td>
+					<td>@DateUtils.formatDate(informe.fecha_pago)</td>
+					<td>@DateUtils.calcularDiferenciaDias(informe.fecha,informe.fecha_pago)</td>
 					<td>@informe.cliente.nombre</td>
 					<td class="totalFactura" data-valor="@informe.recupero_factura.getTotal()">@utils.NumberUtils.moneda(informe.recupero_factura.getTotal())</td>
 					<td class="totalPagos" data-valor="@informe.totalPagos">@utils.NumberUtils.moneda(informe.totalPagos)</td>
