--- a/app/views/patrimonio/actasMovimientos/lineaActaMovimiento.scala.html
+++ b/app/views/patrimonio/actasMovimientos/lineaActaMovimiento.scala.html
@@ -1,11 +1,11 @@
 @(linea: ActaMovimiento, editable: Boolean)
 
- 
-			
+
+
 
 <tr data-id="@linea.id" @if(linea.cancelado){class="cancelada"}>
 	@if(editable){
-		
+
 	}
 	<td>@linea.organigrama.nombre</td>
 	<td>@linea.usuario.nombre</td>
@@ -13,10 +13,10 @@
 	<td>@utils.DateUtils.formatDate(linea.fecha_llegada,"dd/MM/yyyy HH:mm:ss")</td>
 	<td>@utils.DateUtils.formatDate(linea.fecha_salida,"dd/MM/yyyy HH:mm:ss")</td>
 	<td>@ActaMovimiento.tiempoEnMovimiento(linea)</td>
-	<td>@if(linea.estado !=  null){@linea.estado.nombre}</td>
+	<td>@if(linea.estado !=  null){@linea.estado.nombre}  @if(linea.cierre != null && linea.cierre){- CERRADO} </td>
 	<td>@if(linea.cancelado){CANCELADO}</td>
-	
-	
+
+
 	<td>
 		@if(linea != null && linea.descripcion != null && !linea.descripcion.isEmpty()){
 			<div class='tip-top pointer' style="display: inline;" title='@linea.descripcion'>
