--- a/app/views/novedades/planificaciones/tabsPlanificaciones.scala.html
+++ b/app/views/novedades/planificaciones/tabsPlanificaciones.scala.html
@@ -44,7 +44,7 @@ totalHorarPorDiaPorPlanificacion:List[com.avaje.ebean.SqlRow])
 		}
 
 		<!-- -------------------GUARDIAS----------------------------- -->
-		@if(planificacion.tipo_planificacion_id == models.novedades.TipoPlanificacion.GUARDIA || planificacion.tipo_planificacion_id == models.novedades.TipoPlanificacion.HS_FARMACIA_ADMINISTRATIVOS) {
+		@if(planificacion.tipo_planificacion_id != models.novedades.TipoPlanificacion.PRODUCCION_IMAGENES && planificacion.tipo_planificacion_id != models.novedades.TipoPlanificacion.PRODUCCION_GENERAL) {
 
 			<li><a class="tabDetalles" href="#contenedorDetalles" data-toggle="tab">Novedades Detalles</a></li>
 			<li><a class="tabHoras" href="#contenedorHoras" data-toggle="tab">Cantidad Horas</a></li>
@@ -208,7 +208,7 @@ totalHorarPorDiaPorPlanificacion:List[com.avaje.ebean.SqlRow])
 
 
 		<!-- -------------------GUARDIAS----------------------------- -->
-		@if(planificacion.tipo_planificacion_id == models.novedades.TipoPlanificacion.GUARDIA  || planificacion.tipo_planificacion_id == models.novedades.TipoPlanificacion.HS_FARMACIA_ADMINISTRATIVOS) {
+		@if(planificacion.tipo_planificacion_id != models.novedades.TipoPlanificacion.PRODUCCION_IMAGENES && planificacion.tipo_planificacion_id != models.novedades.TipoPlanificacion.PRODUCCION_GENERAL) {
 
 			<div class="tab-pane" id="contenedorDetalles">
 				<div class="row">
