--- a/app/views/expediente/expediente/verExpediente.scala.html
+++ b/app/views/expediente/expediente/verExpediente.scala.html
@@ -207,6 +207,15 @@
 				</label>
 			</div>
 		</div>
+		<div class="col-sm-3">
+			<div class="checkbox">
+				<label class="control-label">
+					PAGO
+					@checkbox(lcForm("pago"), 'disabled -> "disabled")
+				</label>
+			</div>
+		</div>
+
 
 	</div>
 	@views.html.expediente.expediente.tabsExpediente(false, lcForm)
