--- a/app/views/expediente/expediente/formExpediente.scala.html
+++ b/app/views/expediente/expediente/formExpediente.scala.html
@@ -1,15 +1,15 @@
 @(expedienteForm: Form[Expediente],create: Boolean)
 @import helper._
-@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) } 
+@implicitFieldConstructor = @{ FieldConstructor(simpleInput.render) }
 
 
 	<div class="row menu-acciones">
 		<div class="col-sm-10">
-			<button type="submit" class="btn btn-default" title="Guardar solicitud"><i class="glyphicon glyphicon-floppy-disk"></i> Guardar</button>	
+			<button type="submit" class="btn btn-default" title="Guardar solicitud"><i class="glyphicon glyphicon-floppy-disk"></i> Guardar</button>
 	    	<a href="@controllers.expediente.routes.ExpedientesController.indexExpediente()" title="Cancelar operación" class="btn btn-default"><i class="glyphicon glyphicon-floppy-remove"></i> Cancelar</a>
 	    </div>
 		<div class="col-sm-2">
-			<a href="@controllers.expediente.routes.ExpedientesController.indexExpediente()" title="Volver al listado" class="btn btn-default"><i class="glyphicon glyphicon-list"></i></a> 
+			<a href="@controllers.expediente.routes.ExpedientesController.indexExpediente()" title="Volver al listado" class="btn btn-default"><i class="glyphicon glyphicon-list"></i></a>
 		</div>
 	</div>
 
@@ -17,7 +17,7 @@
 	@inputText(expedienteForm("id"), 'type -> "hidden", 'id -> "expedienteId")
 		<div class="col-sm-2">
 			<div class="form-group @if(expedienteForm.error("nombre") != null) {has-error}else{has-required}">
-				<label for="inputNombre" class="control-label">Expediente</label> 
+				<label for="inputNombre" class="control-label">Expediente</label>
 				@inputText(expedienteForm("nombre"), 'class -> "form-control")
 				@expedienteForm("nombre").error.map{ error =>
 					<div class="text-error">@error.message</div>
@@ -26,7 +26,7 @@
 		</div>
 		<div class="col-sm-7">
 			<div class="form-group @if(expedienteForm.error("descripcion") != null) {has-error}else{has-required}">
-				<label for="inputNombre" class="control-label">Descripción</label> 
+				<label for="inputNombre" class="control-label">Descripción</label>
 				@inputText(expedienteForm("descripcion"), 'class -> "form-control")
 				@expedienteForm("descripcion").error.map{ error =>
 					<div class="text-error">@error.message</div>
@@ -37,7 +37,7 @@
 	<div class="row">
 		<div class="col-sm-2">
 			<div class="form-group @if(expedienteForm.error("ejercicio_id") != null) {has-error}else{has-required}">
-				<label for="inputEjercicio" class="control-label">Ejercicio</label> 
+				<label for="inputEjercicio" class="control-label">Ejercicio</label>
 				@inputText(expedienteForm("ejercicio.nombre"),'class -> "form-control")
 				@inputText(expedienteForm("ejercicio_id"),'hidden -> "hidden")
 				@expedienteForm("ejercicio_id").error.map{ error =>
@@ -47,47 +47,47 @@
 		</div>
 		<div class="col-sm-2">
 			<div class="form-group @if(expedienteForm.error("fecha") != null) {has-error}">
-				<label for="fecha_factura" class="control-label">Fecha</label> 
-				 
-				
+				<label for="fecha_factura" class="control-label">Fecha</label>
+
+
 				@if(create != true){
 					@inputText(expedienteForm("fecha"), 'class -> "form-control",'readOnly -> "readOnly")
-				
+
 				}else{
 					@inputText(expedienteForm("fecha"),'class -> "form-control date", 'id -> "fecha")
 				}
-				
+
 			</div>
 		</div>
 		<div class="col-sm-5">
 			<div class="form-group">
-				<label for="inputIniciador" class="control-label">Iniciador</label> 
+				<label for="inputIniciador" class="control-label">Iniciador</label>
 				@inputText(expedienteForm("iniciador.nombre"),'class -> "form-control")
 				@inputText(expedienteForm("iniciador.id"),'hidden -> "hidden")
 			</div>
 		</div>
-		
+
 	</div>
-	
+
 	<div class="row">
 		<div class="col-sm-2">
-			<label for="expediente" class="control-label">Expediente Padre</label> 
+			<label for="expediente" class="control-label">Expediente Padre</label>
 			<div class="input-group">
 				@inputText(expedienteForm("parent.expedienteEjercicio"),'class -> "form-control", 'id -> "expediente")
 				@inputText(expedienteForm("parent_id"),'hidden -> "hidden", 'id -> "expediente_id")
 
 				<span class="input-group-addon">
-						<a href="#" id="searchExpediente" 
-									data-title="Selección de expediente" 
-									data-url="@controllers.expediente.routes.ExpedientesController.modalBuscar()" 
-									data-height="650" data-width="700" 
-									data-listen="modal.seleccion.expediente.simple" 
-									data-label="#expediente" 
+						<a href="#" id="searchExpediente"
+									data-title="Selección de expediente"
+									data-url="@controllers.expediente.routes.ExpedientesController.modalBuscar()"
+									data-height="650" data-width="700"
+									data-listen="modal.seleccion.expediente.simple"
+									data-label="#expediente"
 									data-field="#expediente_id">
 						<i class="glyphicon glyphicon-search"></i></a>
 				</span>
 			</div>
-		</div>	
+		</div>
 		<div class="col-sm-2">
 			<div class="checkbox">
 				<label class="control-label">
@@ -96,7 +96,7 @@
 				</label>
 			</div>
 		</div>
-		
+
 		<div class="col-sm-2">
 			<div class="checkbox">
 				<label class="control-label">
@@ -104,7 +104,7 @@
 					@checkbox(expedienteForm("reservado"))
 				</label>
 			</div>
-		</div>		
+		</div>
 		<div class="col-sm-3">
 			<div class="checkbox">
 				<label class="control-label">
@@ -112,7 +112,7 @@
 					@checkbox(expedienteForm("licitacion"))
 				</label>
 			</div>
-		</div>	
+		</div>
 		<div class="col-sm-3">
 			<div class="checkbox">
 				<label class="control-label">
@@ -120,9 +120,9 @@
 					@checkbox(expedienteForm("emergencia"))
 				</label>
 			</div>
-		</div>	
+		</div>
 	</div>
-	
+
 	<div class="row">
 		<div class="col-sm-2">
 			<div class="checkbox">
@@ -131,7 +131,7 @@
 					@checkbox(expedienteForm("cerrar"))
 				</label>
 			</div>
-		</div>		
+		</div>
 		<div class="col-sm-2">
 			<div class="checkbox">
 				<label class="control-label">
@@ -139,7 +139,7 @@
 					@checkbox(expedienteForm("activo"))
 				</label>
 			</div>
-		</div>		
+		</div>
 		<div class="col-sm-3">
 			<div class="checkbox">
 				<label class="control-label">
@@ -147,8 +147,8 @@
 					@checkbox(expedienteForm("guardia"))
 				</label>
 			</div>
-		</div>	
-		
+		</div>
+
 		<div class="col-sm-3">
 			<div class="checkbox">
 				<label class="control-label">
@@ -156,11 +156,19 @@
 					@checkbox(expedienteForm("profe"))
 				</label>
 			</div>
-		</div>	
-		
+		</div>
+		div class="col-sm-3">
+			<div class="checkbox">
+				<label class="control-label">
+					PAGO
+					@checkbox(expedienteForm("pago"))
+				</label>
+			</div>
+		</div>
+
 	</div>
 <script>
 $( function(){
-	$('#searchExpediente').modalSearch();	
+	$('#searchExpediente').modalSearch();
 });
-</script>	
+</script>
