--- a/app/views/rrhh/profesion/formProfesion.scala.html
+++ b/app/views/rrhh/profesion/formProfesion.scala.html
@@ -12,13 +12,13 @@
 				}
 			</div>
 		</div>
-		<div class="col-sm-2">
+		<!-- <div class="col-sm-2">
 			<div class="checkbox">
 				<label>
 					Asistencial @checkbox(profesionForm("asistencial"))
 				</label>
 			</div>
-		</div>
+		</div> -->
 
 
 		<div class="col-sm-2">
